Resize product images

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,7 +18,7 @@
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
                         {% else %}
-                        <a href="">
+                        <a href="{{ MEDIA_URL }}noimage.png">
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                         </a>
                     {% endif %}
@@ -101,6 +101,9 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block page_footer %}
 <!-- Includes -->
 {% include 'reviews/includes/reviews.html' %}
 {% endblock %}
