--- a/reviews/templates/reviews/includes/reviews.html
+++ b/reviews/templates/reviews/includes/reviews.html
@@ -13,7 +13,7 @@
                 Review <i class="fas fa-star"></i></a>
             <!-- Or prompt a user to login to leave a review -->
             {% else %}
-            <h6 class="title-heading-small">Please <a href="{% url 'account_login' %}">log in</a> to add a review of a product.</h6>
+            <h6 class="title-heading-small m-3">Please <a href="{% url 'account_login' %}">log in</a> to add a review of a product.</h6>
             {% endif %}
         </div>
     
