--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -10,36 +10,36 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 {% endblock %}
 
-{% block page_header %}
+<!-- {% block page_header %}
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
     </div>
 </div>
-{% endblock %}
+{% endblock %} -->
 
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col text-center mt-3">
+            <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
+                <!-- Post title goes in these h1 tags -->
+                <h1>{{ post.title }}</h1>
+                <!-- Post author goes before the | the post's created date goes after -->
+                <p>Written By: {{ post.author }} | {{ post.created_on }}</p>
+            </div>
         </div>
     </div>
 </div>
 
 <div class="container">
-    <div class="col-md-6">
-        <!-- Post title goes in these h1 tags -->
-        <h1 class="post-title">{{ post.title }}</h1>
-        <!-- Post author goes before the | the post's created date goes after -->
-        <p class="post-subtitle">Written By: {{ post.author }} | {{ post.created_on }}</p>
-    </div>
-    <div class="row">
-        <div class="col-md-8 card mb-4 mt-3">
+    <div class="row pb-5">
+        <div class="card col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5">
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <p class="card-text ">
+                <p class="card-text">
                     {{ post.content | safe }}
                 </p>
                 <div class="row">
@@ -80,7 +80,7 @@
     </div> -->
     
     <div class="row">
-        <div class="col-md-8 card mb-4 mt-3">
+        <div class="card col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5">
             <div class="card-body">
                 <!-- For later -->
                 {% if commented %}
@@ -103,7 +103,7 @@
                 {% endif %}
             </div>
         </div>
-        <div class="col-md-8 card mb-4 mt-3">
+        <div class="card col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5">
             <h3>Comments:</h3>
             <div class="card-body">
                 {% if not post.comments.all %}
