--- a/company_info/templates/company/about_us.html
+++ b/company_info/templates/company/about_us.html
@@ -11,12 +11,10 @@
 {% endblock %}
 
 {% block content %}
-<!-- White background overlay div to hide the homepage background image -->
 <div class="overlay"></div>
 <div class="container faq-container">
     <div class="row">
         <div class="col">
-            <!-- Page Header -->
             <h2 class="logo-font mb-4 text-center page-title"><strong>
                     About Us
                 </strong></h2>
@@ -29,9 +27,12 @@
             <h4 class="logo">Who's Signature?</h4>
         </div>
         <div class="col-12 text-center">
-            <p>We're all about creating effortless, everyday jewellery that you'll love for years to come. We are passionate about offering the highest quality of service and our wealth of knowledge guarantees you and your precious jewellery will be exceptionally cared for. 
+            <p>We're all about creating effortless, everyday jewellery that you'll love for years to come. We are
+                passionate about offering the highest quality of service and our wealth of knowledge guarantees you and
+                your precious jewellery will be exceptionally cared for.
             </p>
-            <p>Whether you're buying Signature for yourself or a loved one, we hope our jewellery is an expression of who you are, where you've been, and where you are going.
+            <p>Whether you're buying Signature for yourself or a loved one, we hope our jewellery is an expression of
+                who you are, where you've been, and where you are going.
             </p>
         </div>
     </div>
@@ -40,7 +41,8 @@
             <h4 class="logo">Our Mission</h4>
         </div>
         <div class="col-12 text-muted text-center">
-            <h6>To design and create jewelry that exceeds our customer's expectations in quality, value, and service.</h6>
+            <h6>To design and create jewelry that exceeds our customer's expectations in quality, value, and service.
+            </h6>
         </div>
         <div class="col-12 text-muted text-center mt-5">
             <h4 class="logo">Our Values</h4>
@@ -50,25 +52,28 @@
         </div>
         <div class="col-12 text-center">
             <p>
-                All jewelry are made with care and perfection. We always strive to make high quality jewelry wether it's sterling silver or gold.
+                All jewelry are made with care and perfection. We always strive to make high quality jewelry wether it's
+                sterling silver or gold.
             </p>
         </div>
         <div class="col-12 text-muted text-center">
             <h6>Caring</h6>
         </div>
         <div class="col-12 text-center">
-            <p>We care about our customers and strive to meet any need. 
+            <p>We care about our customers and strive to meet any need.
             </p>
         </div>
         <div class="col-12 text-muted text-center">
             <h6>Adventure</h6>
         </div>
         <div class="col-12 text-center">
-            <p>Every design process is a new adventure with endless possibilities. We want to think outside the box and never settle for the easy choice. 
+            <p>Every design process is a new adventure with endless possibilities. We want to think outside the box and
+                never settle for the easy choice.
             </p>
         </div>
         <div class="col-12 text-center mt-5">
-            <h5 class="title-heading-small ml-5">We hope Signature can be a part of your life just as much as it is ours</h5>
+            <h5 class="title-heading-small ml-5">We hope Signature can be a part of your life just as much as it is ours
+            </h5>
             </p>
         </div>
     </div>
