--- a/company_info/templates/help/faqs.html
+++ b/company_info/templates/help/faqs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block extra_title %} - Contact Us{% endblock %}
+{% block extra_title %} - FAQ{% endblock %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -23,8 +23,8 @@
     </div>
 </div>
 
-    <div class="accordion row pb-5" id="accordionOne">
-        <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
+<div class="accordion row pb-5" id="accordionOne">
+    <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
         <!-- Frequently Asked Questions Section -->
         <div class="card">
             <div class="card-header" id="headingOne">
@@ -37,7 +37,8 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionOne">
                 <div class="card-body">
-                    You can use the <a class="links" href="{% url 'contact' %}">Contact Us</a>  form or e-mail us directly at support@signature.co.
+                    You can use the <a class="links" href="{% url 'contact' %}">Contact Us</a>  form or e-mail us
+                    directly at support@signature.co.
                 </div>
             </div>
         </div>
@@ -52,8 +53,13 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionOne">
                 <div class="card-body">
-                    If for any reason you are not 100% satisfied with your purchase, you may return it within 60 days after arrival for a no-hassle FULL refund.
-                    Please note that all shipping costs are non-refundable.Our policy lasts for 60 days. If 60 days have gone by since your goods have been delivered, unfortunately, we can’t offer you a refund of any kind. To be eligible for a return, your item must be unused and in the same condition as received. It must also be in the original packaging. To complete your return, we require a receipt or proof of purchase Please email us: support@signature.co to begin processing your refund.
+                    If for any reason you are not 100% satisfied with your purchase, you may return it
+                    within 60 days after arrival for a no-hassle FULL refund.
+                    Please note that all shipping costs are non-refundable.Our policy lasts for 60 days. If 60 days have
+                    gone by since your goods have been delivered, unfortunately, we can’t offer you a refund of any
+                    kind. To be eligible for a return, your item must be unused and in the same condition as received.
+                    It must also be in the original packaging. To complete your return, we require a receipt or proof of
+                    purchase Please email us: support@signature.co to begin processing your refund.
                 </div>
             </div>
         </div>
@@ -68,8 +74,11 @@
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionOne">
                 <div class="card-body">
-                    Please email us at support@signature.co with your order number so we can provide you with the proper instructions and address to process your refund.
-                    Once a return is received successfully and verified to be in good order, the refund minus shipping charge and restocking fee (if applicable) will be made via the original method of payment. Please allow 3-10 working days for the credit to be reflected in your account.
+                    Please email us at support@signature.co with your order number so we can provide you with the proper
+                    instructions and address to process your refund.
+                    Once a return is received successfully and verified to be in good order, the refund minus shipping
+                    charge and restocking fee (if applicable) will be made via the original method of payment. Please
+                    allow 3-10 working days for the credit to be reflected in your account.
                 </div>
             </div>
         </div>
@@ -84,7 +93,11 @@
             </div>
             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionOne">
                 <div class="card-body">
-                    Once your order has been submitted, we can only accept changes or cancellations within 24 hours after your purchase as we tend to process our orders pretty quickly! If you are within this time frame, please email us at support@signature.co and we'll help you out immediately.Please make sure to double and triple check that all items you selected are in your cart, the address your order is being shipped to is correct, and the payment method you are using is good to go!
+                    Once your order has been submitted, we can only accept changes or cancellations within 24 hours
+                    after your purchase as we tend to process our orders pretty quickly! If you are within this time
+                    frame, please email us at support@signature.co and we'll help you out immediately.Please make sure
+                    to double and triple check that all items you selected are in your cart, the address your order is
+                    being shipped to is correct, and the payment method you are using is good to go!
                 </div>
             </div>
         </div>
@@ -103,8 +116,8 @@
                 </div>
             </div>
         </div>
-        </div>
     </div>
+</div>
 </div>
 
 {% endblock %}
