--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -1,41 +1,31 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
-<!-- Font Awesome -->
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 {% endblock %}
 
-<!-- {% block page_header %}
+{% block page_header %}
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
     </div>
 </div>
-{% endblock %} -->
+{% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
 <div class="container">
     <div class="row">
-        <div class="col text-center mt-3">
-            <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
-                <!-- Post title goes in these h1 tags -->
-                <h1>{{ post.title }}</h1>
-                <!-- Post author goes before the | the post's created date goes after -->
-                <p>Written By: {{ post.author }} | {{ post.created_on }}</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row pb-5">
         <div class="card col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5">
+            <div class="col text-center mt-3">
+                <div>
+                    <!-- Post title goes in these h1 tags -->
+                    <h1>{{ post.title }}</h1>
+                    <!-- Post author goes before the | the post's created date goes after -->
+                    <p>Written By: {{ post.author }} | {{ post.created_on }}</p>
+                </div>
+            </div>
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
@@ -50,16 +40,18 @@
                             <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
                                 {% csrf_token %}
                                 {% if liked %}
-                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i class="fas fa-heart"></i></button>
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
+                                        class="fas fa-heart"></i></button>
                                 {% else %}
-                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i class="far fa-heart"></i></button>
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
+                                        class="far fa-heart"></i></button>
                                 {% endif %}
                             </form>
                             {% else %}
                             <span class="text-secondary"><i class="far fa-heart"></i></span>
                             {% endif %}
-                        <!-- The number of likes goes before the closing strong tag -->
-                        <span class="text-secondary">{{ post.number_of_likes }} </span>
+                            <!-- The number of likes goes before the closing strong tag -->
+                            <span class="text-secondary">{{ post.number_of_likes }} </span>
                         </strong>
                     </div>
                     <div class="col-1">
@@ -73,23 +65,17 @@
             </div>
         </div>
     </div>
-    <!-- <div class="row">
-        <div class="col">
-            <hr>
-        </div>
-    </div> -->
-    
+
     <div class="row">
         <div class="card col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5">
             <div class="card-body">
-                <!-- For later -->
                 {% if commented %}
                 <div class="alert alert-success" role="alert">
                     Your comment is awaiting approval
                 </div>
                 {% else %}
                 {% if user.is_authenticated %}
-    
+
                 <h3>Leave a comment: <i class="fas fa-comments ps-1 blueicon"></i></h3>
                 <p>Posting as: {{ user.username }}</p>
                 <form method="post" style="margin-top: 1.3em;">
@@ -98,7 +84,8 @@
                     <button type="submit" class="btn btn-color btn-lg">Submit For Approval</button>
                 </form>
                 {% else %}
-                <h3>Please <a href="{% url 'account_login' %}">login</a> or <a href="{% url 'account_signup' %}">register</a> to like or leave a comment.</h3>
+                <h3>Please <a href="{% url 'account_login' %}">login</a> or <a
+                        href="{% url 'account_signup' %}">register</a> to like or leave a comment.</h3>
                 {% endif %}
                 {% endif %}
             </div>
@@ -107,7 +94,7 @@
             <h3>Comments:</h3>
             <div class="card-body">
                 {% if not post.comments.all %}
-                 <p class=" text-muted">No comment yet. Add one above...</p> 
+                <p class=" text-muted">No comment yet. Add one above...</p>
                 {% else %}
                 <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
                 {% for comment in comments %}
