--- a/company_info/templates/help/shipping_returns.html
+++ b/company_info/templates/help/shipping_returns.html
@@ -10,7 +10,6 @@
 </div>
 {% endblock %}
 
-
 {% block content %}
 
 <div class="overlay"></div>
@@ -23,8 +22,8 @@
     </div>
 </div>
 
-    <div class="accordion row pb-5" id="accordionOne">
-        <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
+<div class="accordion row pb-5" id="accordionOne">
+    <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
         <!-- Shipping & Returns Section -->
         <div class="card">
             <div class="card-header" id="headingOne">
@@ -37,7 +36,11 @@
             </div>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionOne">
                 <div class="card-body">
-                    When your order has shipped, you will receive an email notification from us which will include a tracking number you can use to check its status. Please allow 48 hours for the tracking information to become available. If you haven’t received your order within 3 days of receiving your shipping confirmation email, please contact us at support@signature.co. with your name and order number, and we will look into it for you.
+                    When your order has shipped, you will receive an email notification from us which will include a
+                    tracking number you can use to check its status. Please allow 48 hours for the tracking information
+                    to become available. If you haven’t received your order within 3 days of receiving your shipping
+                    confirmation email, please contact us at support@signature.co. with your name and order number, and
+                    we will look into it for you.
                 </div>
             </div>
         </div>
@@ -52,7 +55,10 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionOne">
                 <div class="card-body">
-                    Our warehouse processes and ships out all orders Monday-Saturday (excluding major holidays). After placing your order, your package should be shipped out within 3-5 business days, and you will receive an email with the tracking number soon after. If your order has been processing for more than 6 business days, please contact us at support@signature.co. and we'll help you out immediately.
+                    Our warehouse processes and ships out all orders Monday-Saturday (excluding major holidays). After
+                    placing your order, your package should be shipped out within 3-5 business days, and you will
+                    receive an email with the tracking number soon after. If your order has been processing for more
+                    than 6 business days, please contact us at support@signature.co. and we'll help you out immediately.
                 </div>
             </div>
         </div>
@@ -61,7 +67,7 @@
                 <h2 class="mb-3">
                     <button class="btn btn-link text-color" type="button" data-toggle="collapse"
                         data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      How much is shipping?  
+                        How much is shipping?
                     </button>
                 </h2>
             </div>
@@ -71,8 +77,8 @@
                 </div>
             </div>
         </div>
-        </div>
     </div>
+</div>
 </div>
 
 {% endblock %}
