--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -3,26 +3,25 @@
 
 {% block page_header %}
 <div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
+  <div class="row">
+    <div class="col"></div>
+  </div>
 </div>
 {% endblock %}
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row">
-        <div class="col text-center mt-3">
-            <h2 class="logo-font">Product Review</h2>
-            <hr class="w-50 mb-1">
-        </div>
+  <div class="row">
+    <div class="col text-center mt-3">
+      <h2 class="logo-font">Product Review</h2>
+      <hr class="w-50 mb-1">
     </div>
+  </div>
 
   <!--renders the review form for the user to add a review-->
   <div class="row pb-5">
     <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
-      <form method="POST" action="{% url 'add_review' product.id %}" class="form"
-            enctype="multipart/form-data">
+      <form method="POST" action="{% url 'add_review' product.id %}" class="form" enctype="multipart/form-data">
         {{ form | crispy | safe }}
         {% csrf_token %}
         <div class="text-center">
