--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 {% block page_header %}
-<!--header-->
+
 <div class="container header-container">
   <div class="row">
-      <div class="col"></div>
+    <div class="col"></div>
   </div>
 </div>
 {% endblock %}
@@ -13,15 +13,14 @@
 <div class="container">
   <div class="row">
     <div class="col text-center mt-3">
-        <h2 class="logo-font">Product Review</h2>
-        <hr class="w-50 mb-1">
+      <h2 class="logo-font">Product Review</h2>
+      <hr class="w-50 mb-1">
     </div>
-</div>
-  <!-- form that allows the user to edit-->
+  </div>
+  <!-- form to enable user to edit review -->
   <div class="row pb-5">
     <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
-      <form method="POST" action="{% url 'edit_review' review.id %}" class="form mb-2"
-            enctype="multipart/form-data">
+      <form method="POST" action="{% url 'edit_review' review.id %}" class="form mb-2" enctype="multipart/form-data">
         {{ form | crispy | safe }}
         {% csrf_token %}
         <!--buttons to update or cancel the process-->
