--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,27 +1,26 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-color">
-                    500 Server Error!
-                </h1>
-                <p>Sorry about that.  Something has gone wrong.</p>
-                <div class="my-5">
-                    <h4>
-                        <a href="{% url 'products' %}" 
-                            class="shop-now-button btn btn-lg rounded text-uppercase py-3">
-                                Return to shop
-                        </a>
-                    </h4>
-                </div>
+</div>
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 logo-font text-color">
+                500 Server Error!
+            </h1>
+            <p>Sorry about that. Something has gone wrong.</p>
+            <div class="my-5">
+                <h4>
+                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded text-uppercase py-3">
+                        Return to shop
+                    </a>
+                </h4>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
