Adjust add to bag button

--- a/reviews/templates/reviews/includes/reviews.html
+++ b/reviews/templates/reviews/includes/reviews.html
@@ -22,7 +22,7 @@
             <!-- Display product reviews -->
             {% if reviews %}
             {% for review in product.reviews.all %}
-            <div class="col-md-6 col-lg-3 col-xl-3 mx-auto mt-3 mb-3">
+            <div class="col-12 col-md-6 col-lg-4 mx-auto mt-3 mb-3">
                 <div class="card box-shadow h-100">
                     <div class="card-body card-body-review">
                         <div class="blockquote-custom-icon quote-square shadow-1-strong">
