--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
   <!-- Meta tags for improved SEO using search keywords and descriptions -->
   <meta name="description"
-    content="Signature offers quality jewellery at an amazing price. From gifts for loved ones to treats for yourself, there's something for every occasion">
+    content="Signature offers quality jewellery at an amazing price. From gifts for loved ones to treats for yourself, there's something for every occasion.">
   <meta name="keywords"
     content="The Best Places To Find Jewellery, Engagement Rings England, Gold Necklace, Gold Earrings, Silver Necklace, Silver Earrings, Jewellery Gifts, Quality Jewellery, Gifts for Her, Gifts for Women">
   {% endblock %}
@@ -229,7 +229,7 @@
               </div>
             </div>
             <h6 class="text-uppercase">Follow Us</h6>
-            <a class="text-color" href="https://www.facebook.com/"
+            <a class="text-color" href="https://www.facebook.com/profile.php?id=100089994846073"
               aria-label="Go to our Facebook page (opens in new tab)" rel="noopener" target="_blank">
               <i class="fab fa-facebook"></i>
             </a>
