--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -81,6 +81,7 @@
                             <div class="row">
                                 <div class="col">
                                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                    <p class="small mt-1 mb-0 text-muted"><i class="fas fa-palette"></i> {{ product.colour }}</p>
                                     {% if product.category %}
                                     <p class="small mt-1 mb-0">
                                         <a class="text-muted"
