--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -16,7 +16,7 @@
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+                <a class="btn rounded border-color text-color" href="{% url 'account_login' %}">Back to Login</a>
                 <input type="submit" name="action" value="{% trans 'change password' %}"/>
             </form>
         {% else %}
