Change default email in settings

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
   <meta name="description"
     content="Signature offers quality jewellery at an amazing price. From gifts for loved ones to treats for yourself, there's something for every occasion.">
   <meta name="keywords"
-    content="The Best Places To Find Jewellery, Engagement Rings England, Gold Necklace, Gold Earrings, Silver Necklace, Silver Earrings, Jewellery Gifts, Quality Jewellery, Gifts for Her, Gifts for Women">
+    content="The Best Places To Find Jewellery, Engagement Rings, Jewellery Gifts, Quality Jewellery, Gifts for Her, Gifts for Women, Signature Jewellery, Jewellery shop near me, Jewellery Sale, Jewellery for Women, Gold Necklace, Gold Earrings, Silver Necklace, Silver Earrings">
   {% endblock %}
 
   {% block extra_meta %}
