--- a/templates/base.html
+++ b/templates/base.html
@@ -256,12 +256,12 @@
 
   {% block postloadjs %}
   <!-- initializes toasts -->
-  <script type="text/javascript">
+  <script>
     $('.toast').toast('show');
   </script>
   <!-- Mailchimp Subscription -->
-  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-  <script type='text/javascript'>
+  <script src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+  <script>
     (function ($) {
       window.fnames = new Array();
       window.ftypes = new Array();
